k8s/examples/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: foodhub
  labels:
    name: foodhub
    environment: production
